--- a/guia-tricaru.html
+++ b/guia-tricaru.html
@@ -27,6 +27,47 @@
             <nav><a href="mobs-pvp.html">Mobs PVP</a></nav>
             <nav><a href="runas.html">Runas</a></nav>
         </menu>
+        <menu class="menu-grande">
+            <nav class="mg-box">
+                <ul class="menu">
+                    <li class="botao-home"><a href="#">HOME</a></li>
+                    <li><a href="#">Guias</a>
+                        <ul>
+                            <li><a href="#"># Primeiros Passos #</a></li>
+                            <li><a href="#">Arena</a></li>
+                            <li><a href="#">Artefatos</a></li>
+                            <li><a href="#">Batalha de Assalto</a></li>
+                            <li><a href="#">Bestas Elementares</a></li>
+                            <li><a href="#">Cripta B10</a></li>
+                            <li><a href="#">Dragão B12</a></li>
+                            <li><a href="#">Gigante B12</a></li>
+                            <li><a href="#">Gigante de Aço B10</a></li>
+                            <li><a href="#">Homunculo</a></li>
+                            <li><a href="#">Labirinto</a></li>
+                            <li><a href="#">Necro B12</a></li>                            
+                            <li><a href="#">Raid BJ5</a></li>
+                            <li><a href="#">Raid Solo</a></li>
+                            <li><a href="#">Runas</a></li>
+                            <li><a href="#">Tricaru</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Mobs PVE</a>
+                        <ul>
+                            <li><a href="#">Nome Mob 1</a></li>
+                            <li><a href="#">Nome Mob 2</a></li>
+                            <li><a href="#">Nome Mob 3</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Mobs PVP</a>
+                        <ul>
+                            <li><a href="#">Nome Mob 1</a></li>
+                            <li><a href="#">Nome Mob 2</a></li>
+                            <li><a href="#">Nome Mob 3</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </menu>
     </header>
     <div class="big-box">
         <main class="box-main">
