--- a/index.html
+++ b/index.html
@@ -28,28 +28,45 @@
             <nav><a href="runas.html">Runas</a></nav>
         </menu>
         <menu class="menu-grande">
-            <div class="mg-coluna">
-                <p class="botao-home"><a href="">HOME</a></p>
-                <div class="mg-coluna2">
-                    <div class="mg-itens">
-                        <nav><a href="#">Guia do Iniciante</a></nav>
-                        <nav><a href="#">Tricaru</a></nav>
-                        <nav><a href="#">Homunculo</a></nav>
-                        <nav><a href="#">Runas</a></nav>
-                        <nav><a href="#">Mobs PVE</a></nav>
-                        <nav><a href="#">Mobs PVP</a></nav>
-                    </div>
-                    <div class="mg-itens">
-                        <nav><a href="#">Siege</a></nav>
-                        <nav><a href="#">Arena</a></nav>
-                        <nav><a href="#">Raid Solo</a></nav>
-                        <nav><a href="#">Raid 5 & BJ5</a></nav>
-                        <nav><a href="#">TOA Hard</a></nav>
-                        <nav><a href="#">TOA Normal</a></nav>
-
-                    </div>
-                </div>
-            </div>    
+            <nav class="mg-box">
+                <ul class="menu">
+                    <li class="botao-home"><a href="index.html">HOME</a></li>
+                    <li><a href="#">Guias</a>
+                        <ul>
+                            <li><a href="guia-do-iniciante.html"># Primeiros Passos #</a></li>
+                            <li><a href="#">Arena</a></li>
+                            <li><a href="#">Artefatos</a></li>
+                            <li><a href="#">Batalha de Assalto</a></li>
+                            <li><a href="#">Bestas Elementares</a></li>
+                            <li><a href="#">Cripta B10</a></li>
+                            <li><a href="#">Dragão B12</a></li>
+                            <li><a href="#">Gigante B12</a></li>
+                            <li><a href="#">Gigante de Aço B10</a></li>
+                            <li><a href="guia-homunculos.html">Homunculo</a></li>
+                            <li><a href="#">Labirinto</a></li>
+                            <li><a href="#">Necro B12</a></li>                            
+                            <li><a href="#">Raid BJ5</a></li>
+                            <li><a href="#">Raid Solo</a></li>
+                            <li><a href="#">Runas</a></li>
+                            <li><a href="guia-tricaru.html">Tricaru</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Mobs PVE</a>
+                        <ul>
+                            <li><a href="#">Nome Mob 1</a></li>
+                            <li><a href="#">Nome Mob 2</a></li>
+                            <li><a href="#">Nome Mob 3</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Mobs PVP</a>
+                        <ul>
+                            <li><a href="#">Nome Mob 1</a></li>
+                            <li><a href="#">Nome Mob 2</a></li>
+                            <li><a href="#">Nome Mob 3</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
         </menu>
     </header>
     <div class="big-box">
