--- a/guia-tricaru.html
+++ b/guia-tricaru.html
@@ -30,10 +30,10 @@
         <menu class="menu-grande">
             <nav class="mg-box">
                 <ul class="menu">
-                    <li class="botao-home"><a href="#">HOME</a></li>
+                    <li class="botao-home"><a href="index.html">HOME</a></li>
                     <li><a href="#">Guias</a>
                         <ul>
-                            <li><a href="#"># Primeiros Passos #</a></li>
+                            <li><a href="guia-do-iniciante.html"># Primeiros Passos #</a></li>
                             <li><a href="#">Arena</a></li>
                             <li><a href="#">Artefatos</a></li>
                             <li><a href="#">Batalha de Assalto</a></li>
@@ -42,13 +42,13 @@
                             <li><a href="#">Dragão B12</a></li>
                             <li><a href="#">Gigante B12</a></li>
                             <li><a href="#">Gigante de Aço B10</a></li>
-                            <li><a href="#">Homunculo</a></li>
+                            <li><a href="guia-homunculos.html">Homunculo</a></li>
                             <li><a href="#">Labirinto</a></li>
                             <li><a href="#">Necro B12</a></li>                            
                             <li><a href="#">Raid BJ5</a></li>
                             <li><a href="#">Raid Solo</a></li>
                             <li><a href="#">Runas</a></li>
-                            <li><a href="#">Tricaru</a></li>
+                            <li><a href="guia-tricaru.html">Tricaru</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Mobs PVE</a>
