--- a/guia-homunculos.html
+++ b/guia-homunculos.html
@@ -126,8 +126,26 @@
                 </div>
             </div>
             <div class="cases">
-                <div class="case-menu">
-                    <p>guias</p>
+                <h4>Dúvidas Frequentes</h4>
+            </div>
+            <div class="cases" >
+                <div class="case-texto">
+                    <p><a href="#">Batalha de Assalto</a></p>
+                    <p><a href="#">Como avaliar Runas?</a></p>
+                    <p><a href="#">Como fazer o Tricaru?</a></p>
+                    <p><a href="#">Dicas para Iniciantes</a></p>
+                    <p><a href="#">Times para Arena</a></p>
+                    <p><a href="#">O que são Artefatos?</a></p>
+                    <p><a href="#">O que são Homunculos?</a></p>
+                    <p><a href="#">Raid BJ5</a></p>
+                    <p><a href="#">Raid Solo</a></p>
+                    <p><a href="#">Time Bestas Elementares</a></p>
+                    <p><a href="#">Time Cripta B10</a></p>
+                    <p><a href="#">Time Dragão B12</a></p>
+                    <p><a href="#">Time Gigante B12</a></p>
+                    <p><a href="#">Time Gigante de Aço B10</a></p>
+                    <p><a href="#">Time Labirinto</a></p>
+                    <p><a href="#">Time Necro B12</a></p>
                 </div>
             </div>
         </div>
