adaptação de responsividade

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </section>
             <hr>
             <section class="video">
-                <div id="video-home">
+                <div class="video-home">
                     <iframe width="95%" height="376" src="https://www.youtube.com/embed/6xYCsZW07o4"
                         title="Summoners War - Cinematic Trailer [HD]" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
