Mega linkagem e correção do menu

--- a/index.html
+++ b/index.html
@@ -19,13 +19,25 @@
     <header>
         <span class="material-icons" id="menuHamb">menu</span>
         <menu id="menu">
-            <nav><a href="index.html">Home</a></nav>
-            <nav><a href="guia-do-iniciante.html">Guia do Iniciante</a></nav>
-            <nav><a href="guia-tricaru.html">Guia Trícaru</a></nav>
-            <nav><a href="guia-homunculos.html">Guia Homunculus</a></nav>
-            <nav><a href="mobs-pve.html">Mobs PVE</a></nav>
-            <nav><a href="mobs-pvp.html">Mobs PVP</a></nav>
-            <nav><a href="runas.html">Runas</a></nav>
+            <nav class="mh-itens">
+                <a href="index.html">Home</a>
+                <a href="guia-do-iniciante.html"># Primeiros Passos #</a>
+                <a href="times-arena.html">Arena</a>
+                <a href="guia-artefatos.html">Artefatos</a>
+                <a href="guia-batalha-de-assalto.html">Batalha de Assalto</a>
+                <a href="time-bestas-elementares.html">Bestas Elementares</a>
+                <a href="time-cripta.html">Cripta B10</a>
+                <a href="time-dragao.html">Dragão B12</a>
+                <a href="time-gigante.html">Gigante B12</a>
+                <a href="time-gigante-aco.html">Gigante de Aço B10</a>
+                <a href="guia-homunculos.html">Homunculo</a>
+                <a href="time-labirinto.html">Labirinto</a></li>
+                <a href="time-necro.html">Necro B12</a>                            
+                <a href="guia-raid-bj5.html">Raid BJ5</a>
+                <a href="guia-raid-solo.html">Raid Solo</a>
+                <a href="guia-runas.html">Runas</a>
+                <a href="guia-tricaru.html">Tricaru</a>
+            </nav>
         </menu>
         <menu class="menu-grande">
             <nav class="mg-box">
@@ -34,20 +46,20 @@
                     <li><a href="#">Guias</a>
                         <ul>
                             <li><a href="guia-do-iniciante.html"># Primeiros Passos #</a></li>
-                            <li><a href="#">Arena</a></li>
-                            <li><a href="#">Artefatos</a></li>
-                            <li><a href="#">Batalha de Assalto</a></li>
-                            <li><a href="#">Bestas Elementares</a></li>
-                            <li><a href="#">Cripta B10</a></li>
-                            <li><a href="#">Dragão B12</a></li>
-                            <li><a href="#">Gigante B12</a></li>
-                            <li><a href="#">Gigante de Aço B10</a></li>
+                            <li><a href="times-arena.html">Arena</a></li>
+                            <li><a href="guia-artefatos.html">Artefatos</a></li>
+                            <li><a href="guia-batalha-de-assalto.html">Batalha de Assalto</a></li>
+                            <li><a href="time-bestas-elementares.html">Bestas Elementares</a></li>
+                            <li><a href="time-cripta.html">Cripta B10</a></li>
+                            <li><a href="time-dragao.html">Dragão B12</a></li>
+                            <li><a href="time-gigante.html">Gigante B12</a></li>
+                            <li><a href="time-gigante-aco.html">Gigante de Aço B10</a></li>
                             <li><a href="guia-homunculos.html">Homunculo</a></li>
-                            <li><a href="#">Labirinto</a></li>
-                            <li><a href="#">Necro B12</a></li>                            
-                            <li><a href="#">Raid BJ5</a></li>
-                            <li><a href="#">Raid Solo</a></li>
-                            <li><a href="#">Runas</a></li>
+                            <li><a href="time-labirinto.html">Labirinto</a></li>
+                            <li><a href="time-necro.html">Necro B12</a></li>                            
+                            <li><a href="guia-raid-bj5.html">Raid BJ5</a></li>
+                            <li><a href="guia-raid-solo.html">Raid Solo</a></li>
+                            <li><a href="guia-runas.html">Runas</a></li>
                             <li><a href="guia-tricaru.html">Tricaru</a></li>
                         </ul>
                     </li>
@@ -105,22 +117,23 @@
             </div>
             <div class="cases" >
                 <div class="case-texto">
-                    <p><a href="#">Batalha de Assalto</a></p>
-                    <p><a href="#">Como avaliar Runas?</a></p>
-                    <p><a href="#">Como fazer o Tricaru?</a></p>
-                    <p><a href="#">Dicas para Iniciantes</a></p>
-                    <p><a href="#">Times para Arena</a></p>
-                    <p><a href="#">O que são Artefatos?</a></p>
-                    <p><a href="#">O que são Homunculos?</a></p>
-                    <p><a href="#">Raid BJ5</a></p>
-                    <p><a href="#">Raid Solo</a></p>
-                    <p><a href="#">Time Bestas Elementares</a></p>
-                    <p><a href="#">Time Cripta B10</a></p>
-                    <p><a href="#">Time Dragão B12</a></p>
-                    <p><a href="#">Time Gigante B12</a></p>
-                    <p><a href="#">Time Gigante de Aço B10</a></p>
-                    <p><a href="#">Time Labirinto</a></p>
-                    <p><a href="#">Time Necro B12</a></p>
+                    <p><a href="index.html">Home</a></p>
+                    <p><a href="guia-batalha-de-assalto.html">Batalha de Assalto</a></p>
+                    <p><a href="guia-runas.html">Como avaliar Runas?</a></p>
+                    <p><a href="guia-tricaru.html">Como fazer o Tricaru?</a></p>
+                    <p><a href="guia-do-iniciante.html">Dicas para Iniciantes</a></p>
+                    <p><a href="times-arena.html">Times para Arena</a></p>
+                    <p><a href="guia-artefatos.html">O que são Artefatos?</a></p>
+                    <p><a href="guia-homunculos.html">O que são Homunculos?</a></p>
+                    <p><a href="guia-raid-bj5.html">Raid BJ5</a></p>
+                    <p><a href="guia-raid-solo.html">Raid Solo</a></p>
+                    <p><a href="time-bestas-elementares.html">Time Bestas Elementares</a></p>
+                    <p><a href="time-cripta.html">Time Cripta B10</a></p>
+                    <p><a href="time-dragao.html">Time Dragão B12</a></p>
+                    <p><a href="time-gigante.html">Time Gigante B12</a></p>
+                    <p><a href="time-gigante-aco.html">Time Gigante de Aço B10</a></p>
+                    <p><a href="time-labirinto.html">Time Labirinto</a></p>
+                    <p><a href="time-necro.html">Time Necro B12</a></p>
                 </div>
             </div>
         </div>
