responsividade pagina guia do iniciante

--- a/guia-do-iniciante.html
+++ b/guia-do-iniciante.html
@@ -91,11 +91,11 @@
             <hr>
             <section>
                 <div class="primeirospassos1">
-                    <h3>Primeiros Passos!</h3>
                     <div class="primeirospassos1-2">
-                        <img src="imagens/guia-iniciante-logo-sw.png" class="imgsw-logo">
-                        <p>O Summoners War é um jogo muito complexo. Este guia, vai te ajudar a começar do jeito certo! Observe tudo com bastante atenção e utilize todos os recursos e bnus iniciais com clareza. </p>
+                        <h3>Primeiros Passos!</h3>
+                        <p>O Summoners War é um jogo muito complexo. Este guia, vai te ajudar a começar do jeito certo! Observe tudo com bastante atenção e utilize todos os recursos e bônus iniciais com clareza. </p>
                     </div>
+                    <img src="imagens/guia-iniciante-logo-sw.png" class="imgsw-logo">
                 </div>
                 <div>
                     <h3>Caminho do Invocador</h3>
@@ -110,7 +110,7 @@
                 </div>
             </section>
             <hr>
-            <section>
+            <section class="box-horizontal">
                 <h3>Eventos de Boas-Vindas Invocador!</h3>
                 <div>
                     <div class="img-box"><img src="imagens/guia-iniciante-evento-boasvindas.png" alt="sw-eventos" class="img-geral"></div>
