guia iniciante up

--- a/guia-do-iniciante.html
+++ b/guia-do-iniciante.html
@@ -97,11 +97,11 @@
                     </div>
                     <img src="imagens/guia-iniciante-logo-sw.png" class="imgsw-logo">
                 </div>
-                <div>
+                <div class="box-text-ci">
                     <h3>Caminho do Invocador</h3>
                     <p>Sempre olhe o caminho do invocador, ele vai lhe ajudar a completar os mapa mais rápidos.</p>
                 </div>
-                <div>
+                <div class="box-img-texto">
                     <div class="img-box">
                         <img src="imagens/guia-iniciante-mapa-game.png" alt="" class="imgsw-mundo">
                         <img src="imagens/guia-iniciante-mapa-game-p.png" alt="SW-mapa-mundo" class="imgsw-mundo2">
@@ -110,10 +110,12 @@
                 </div>
             </section>
             <hr>
-            <section class="box-horizontal">
+            <section>
                 <h3>Eventos de Boas-Vindas Invocador!</h3>
                 <div>
-                    <div class="img-box"><img src="imagens/guia-iniciante-evento-boasvindas.png" alt="sw-eventos" class="img-geral"></div>
+                    <div class="img-box">
+                        <img src="imagens/guia-iniciante-evento-boasvindas.png" alt="sw-eventos" class="img-geral">
+                    </div>
                     <div>
                         <p>No evento 4º - Escolha o mob <strong class="text-blue">IFRIT (Veromos)</strong> ele te ajudará a fazer a masmorra do dragão.</p>
                         <p><strong class="text-blue">Dica:</strong> No evento que invoca um mob 4*, escolha o <strong class="text-blue">SILF (Tyron)</strong>, ele vai lhe ajudar a completar sua primeira toa normal.</p>
