finalização da pag guia iniciante

--- a/guia-do-iniciante.html
+++ b/guia-do-iniciante.html
@@ -112,10 +112,8 @@
             <hr>
             <section>
                 <h3>Eventos de Boas-Vindas Invocador!</h3>
-                <div>
-                    <div class="img-box">
-                        <img src="imagens/guia-iniciante-evento-boasvindas.png" alt="sw-eventos" class="img-geral">
-                    </div>
+                <div class="box-horizontal">
+                    <img src="imagens/guia-iniciante-evento-boasvindas.png" alt="sw-eventos" class="img-geral">
                     <div>
                         <p>No evento 4º - Escolha o mob <strong class="text-blue">IFRIT (Veromos)</strong> ele te ajudará a fazer a masmorra do dragão.</p>
                         <p><strong class="text-blue">Dica:</strong> No evento que invoca um mob 4*, escolha o <strong class="text-blue">SILF (Tyron)</strong>, ele vai lhe ajudar a completar sua primeira toa normal.</p>
@@ -126,8 +124,8 @@
             <hr>
             <section>
                 <h3><a href="#">Mobs de Fusão</a></h3>
-                <div class="box">
-                    <div class="img-box"><img src="imagens/guia-iniciante-mobs-fusao.png" alt="mobs-fusão" class="img-geral"></div>
+                <div class="box-horizontal">
+                    <img src="imagens/guia-iniciante-mobs-fusao.png" alt="mobs-fusão" class="img-geral">
                     <div>
                         <p>Alguns mobs são primordiais para seu PVE, um deles é o <strong class="text-blue">Verdehile</strong> e ás <strong class="text-blue">Driad</strong>, com esses mobs, você irá fazer: o Dragão B12, 2ª awaken, raid, etc..</p>
                         <p>Sempre verifique os mobs sumonados, pois podem fazer parte de algum material de fusão - na dúvida olhe no edificio de fusão.</p>
@@ -138,8 +136,8 @@
             <hr>
             <section>
                 <h3><a href="#">SD's Importantes</a></h3>
-                <div>
-                    <div class="img-box"><img src="imagens/guia-iniciante-sds-importantes.png" alt="SDs-importantes" class="img-geral"></div>
+                <div class="box-horizontal">
+                    <img src="imagens/guia-iniciante-sds-importantes.png" alt="SDs-importantes" class="img-geral">
                     <div>
                         <p>Todas ás sextas e sábados, abrem masmorras de todos elementos. Nelas você encontrará 2 mobs importantes para seu PVE.</p>
                         <div class="center">
@@ -154,8 +152,8 @@
             <hr>
             <section>
                 <h3><a href="#">1º Despertar</a></h3>
-                <div>
-                    <div class="img-box"><img src="imagens/guia-iniciante-1-despertar.png" alt="1-despertar" class="img-geral"></div>
+                <div class="box-horizontal">
+                    <img src="imagens/guia-iniciante-1-despertar.png" alt="1-despertar" class="img-geral">
                     <div>
                         <p>Após você conseguir o <strong class="text-blue">KRO</strong>, upar e conseguir por ele 6*. Você irá despertá-lo (2awk).</p>
                         <p>Vá até o portal da dimensão, em Karzan. Vai subindo os andares, até o nível 5.</p>
@@ -169,9 +167,9 @@
             <section>
                 <div>
                     <h3><a href="#">Primeiro Time de Gigante B12</a></h3>
-                    <div>
-                        <div class="img-box"><img src="imagens/guia-iniciante-gigante-b12-inicial.png" alt="GB12-inicial" class="img-geral"></div>
-                        <div>
+                    <div class="box-horizontal">
+                        <img src="imagens/guia-iniciante-gigante-b12-inicial.png" alt="GB12-inicial" class="img-geral">
+                        <div class="text-espacamento2">
                             <p>Seguindo nosso guia de iniciante. Agora com time formado, você começara a fazer gigante b12.</p>
                             <p>Nesta parte do seu pve, você vai precisar farma bastante para conseguir as runas: Swifth, Blade, Fatal. </p>
                             <p><strong class="text-blue">Obs.:</strong> Vá na aba de runas, para saber como runar os mobs do pve. </p>
@@ -180,9 +178,9 @@
                 </div>
                 <div>
                     <h3><a href="#">Time de DOT para Gigante B12</a></h3>
-                    <div>
-                        <div class="img-box"><img src="imagens/guia-iniciante-gigante-b12-dot.png" alt="GB12-dot" class="img-geral"></div>
-                        <div>
+                    <div class="box-horizontal">
+                        <img src="imagens/guia-iniciante-gigante-b12-dot.png" alt="GB12-dot" class="img-geral">
+                        <div class="text-espacamento">
                             <p>Existe o time speed, para fazer gigante b12 em menos de 1min. Porém, irá atrasar um pouco seu Dragão B12.</p>
                             <p><strong class="text-blue">Time:</strong> Fran(L), Sath, Driads e Tatu.</p>
                             <p><strong class="text-blue">Obs.:</strong> Tatu, sempre deve, jogar por ultimo, para estourar os dot.</p>
@@ -193,9 +191,9 @@
             <hr>
             <section>
                 <h3><a href="#">Primeiro Dragão B12</a></h3>
-                <div>
-                    <div class="img-box"><img src="imagens/guia-iniciante-dragao-b12-inicial.png" alt="" class="img-geral"></div>
-                    <div>
+                <div class="box-horizontal">
+                    <img src="imagens/guia-iniciante-dragao-b12-inicial.png" alt="" class="img-geral">
+                    <div class="text-espacamento">
                         <p>Além do time de tricaru, tem um inicial, para fazer seu D12, antes de você consegui, fazer o famoso time tricaru.</p>
                         <p><strong class="text-blue">Time:</strong> Verd(L), Bella, Vero,Sig ou Loren e Spectra</p>
                         <p><strong class="text-blue">Obs.:</strong> Spectra não precisa estar 6* e nem com 2awk.</p>
@@ -205,9 +203,9 @@
             <hr>
             <section>
                 <h3><a href="#">Asas de Arena</a></h3>
-                <div>
-                    <div class="img-box"><img src="imagens/guia-iniciante-arena.png" alt="" class="img-geral"></div>
-                    <div>
+                <div class="box-horizontal">
+                    <img src="imagens/guia-iniciante-arena.png" alt="" class="img-geral">
+                    <div class="text-espacamento2">
                         <p><strong class="text-blue">Dica de ouro:</strong> Sempre que você upa de level, suas energias de arena, resetam. Então antes de upar, jogue na arena, os pontos de arena, servem para evoluir os totens de atributo. </p>
                         <p>Os bufs do totem, são globais e primordial, pro seu pve. ficará mais safe.</p>
                         <p>Média de pontos, até o nível 50, jogando contra Amir: <strong class="text-blue">1.500</strong> pontos.</p>
