design interrompido devido a falta de conteudo

--- a/guia-tricaru.html
+++ b/guia-tricaru.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles/principal.css">
     <link rel="stylesheet" href="styles/guia-tricaru.css">
-    <link rel="stylesheet" href="screens-styles/home-screens.css" media="screen and (min-width:600px)">
+    <link rel="stylesheet" href="screens-styles/guia-tricaru-screens.css" media="screen and (min-width:600px)">
     <link rel="stylesheet" href="screens-styles/principal-screens.css" media="screen and (min-width:600px)">
     <title>SW - ReactAttack</title>
 </head>
@@ -98,7 +98,7 @@
                     <img src="imagens/guia-tricaru-icaru.png" alt="" class="imgs-tricaru">
                 </div>
                 <p>Para esse time funcionar, os icarus precisam estar runados de acordo com a sua defesa, que os façam conseguir puxar 3 monstros. Para isso é necessário uma quantia de defesa especifica.</p>
-        
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed et recusandae commodi? Ea architecto optio quas voluptatum quasi natus expedita, dolor illo, laudantium sapiente, debitis amet minus ut totam reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate aliquam reprehenderit dolorum sapiente facere expedita. Alias, inventore quam. Commodi excepturi quam minus, animi blanditiis alias. Quidem neque odit esse facere.</p>
                 <div class="box-imgs-runa-skill">
                     <img src="imagens/guia-tricaru-icaru-runas-fullguard.png" alt="" class="img-fullguard" >
                     <img src="imagens/guia-tricaru-icaru-skill.png" alt="" class="img-tricaru-skill">
@@ -107,12 +107,12 @@
             <hr>
             <section>
                 <h3>Tabela de Def% para criar os Icarus!</h3>
-                <p>Abaixo está uma parte da tabela de Def% dos Icarus de acordo com o level dos <i>totem de defesa</i>, bônus de guild e o número de sets de runas determination:</p>
+                <p>Abaixo está a tabela de Def% dos Icarus de acordo com o level dos <i>totem de defesa</i>, bônus de guild e o número de sets de runas determination:</p>
                 <div class="box-tabelas">
                     <img src="imagens/guia-tricaru-tabela-metade.png" alt="" class="tabela-tricaru-metade" >
                     <img src="imagens/guia-tricaru-tabela.png" alt="" class="tabela-tricaru">
                 </div>
-                <p class="clique-aqui-tricaru">Clique em: <a href="imagens/guia-tricaru-tabela.png" download="Tabela-Tricaru"><i><strong class="text-blue">Tabela de Defesa dos Icarus</strong></i></a> para baixar a tabela completa.</p>
+                <p class="clique-aqui-tricaru">Clique em: <a href="imagens/guia-tricaru-tabela.png" download="Tabela-Tricaru"><i><strong class="text-blue">Tabela de Defesa dos Icarus</strong></i></a> para baixar a tabela.</p>
                 <p><strong class="text-blue">Obs.:</strong> Caso sua guild não tenha o bônus de 5%, aumente a defesa dos tricarus.</p>
             </section>
             <hr>
@@ -134,19 +134,19 @@
                 <p>Agora veremos na prática como funciona o Tricaru no: Dragão B12, Cripta B10 e Necro B12. </p>
                 <div class="text-center">
                     <p><strong>Dragão B12</strong></p>
-                    <div id="video-tricaru">
-                            <iframe width="280vw" height="300vh" src="https://www.youtube.com/embed/QVWXSu35cvk" title="SW - ReactAttack - Tricaru no DB12" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen ></iframe>
+                    <div class="video-tricaru">
+                        <iframe width="280vw" height="300vh" src="https://www.youtube.com/embed/QVWXSu35cvk" title="SW - ReactAttack - Tricaru no DB12" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen ></iframe>
                     </div>
                 </div>
                 <div class="text-center">
                     <p><strong>Necro B12</strong></p>
-                    <div id="video-tricaru">
+                    <div class="video-tricaru">
                         <iframe width="280vw" height="300vh" src="https://www.youtube.com/embed/wB94zHwwkRg" title="SW - ReactAttack - Tricaru no Necro B12" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="text-center">
                     <p><strong>Cripta B10</strong></p>
-                    <div id="video-tricaru">
+                    <div class="video-tricaru">
                         <iframe width="280vw" height="300vh" src="https://www.youtube.com/embed/DGbsHmieG5w" title="SW - ReactAttack - Tricaru na Cripta B10" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
