correção de erros de responsividade

--- a/guia-tricaru.html
+++ b/guia-tricaru.html
@@ -89,16 +89,17 @@
             <hr>
             <section>
                 <h3>O Tricaru</h3>
-                <div class="box-img-verde">
-                    <img src="imagens/guia-tricaru-verdehile.png" alt="" class="img-verde-tricarus">
-                </div>
-                <div class="box-img-tricaru">
-                    <img src="imagens/guia-tricaru-icaru.png" alt="" class="imgs-tricaru">
-                    <img src="imagens/guia-tricaru-icaru.png" alt="" class="imgs-tricaru">
-                    <img src="imagens/guia-tricaru-icaru.png" alt="" class="imgs-tricaru">
+                <div class="big-box-tricaru">
+                    <div class="box-img-verde">
+                        <img src="imagens/guia-tricaru-verdehile.png" alt="" class="img-verde-tricarus">
+                    </div>
+                    <div class="box-img-tricaru">
+                        <img src="imagens/guia-tricaru-icaru.png" alt="" class="imgs-tricaru">
+                        <img src="imagens/guia-tricaru-icaru.png" alt="" class="imgs-tricaru">
+                        <img src="imagens/guia-tricaru-icaru.png" alt="" class="imgs-tricaru">
+                    </div>
                 </div>
                 <p>Para esse time funcionar, os icarus precisam estar runados de acordo com a sua defesa, que os façam conseguir puxar 3 monstros. Para isso é necessário uma quantia de defesa especifica.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed et recusandae commodi? Ea architecto optio quas voluptatum quasi natus expedita, dolor illo, laudantium sapiente, debitis amet minus ut totam reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate aliquam reprehenderit dolorum sapiente facere expedita. Alias, inventore quam. Commodi excepturi quam minus, animi blanditiis alias. Quidem neque odit esse facere.</p>
                 <div class="box-imgs-runa-skill">
                     <img src="imagens/guia-tricaru-icaru-runas-fullguard.png" alt="" class="img-fullguard" >
                     <img src="imagens/guia-tricaru-icaru-skill.png" alt="" class="img-tricaru-skill">
@@ -120,8 +121,9 @@
                 <h3>Montando seu Verdehile pro Tricaru</h3>
                 <div class="box-img-verde">
                     <img src="imagens/guia-tricaru-verdehile.png" alt="" class="img-verde">
+                    <img src="imagens/guia-tricaru-verdehile-runas.png" alt="" class="img-verde-runas2">
                 </div>
-                <p>As runas são baseadas na passiva do Verd. Quanto maior o Dano crítco e o Atk, mais ele cura. A taxa crítica do Verd, tem que ser 100%. Para que a barra de Atk dos mobs, encha e faça ganhar turnos.</p>
+                <p>As runas são baseadas na passiva do Verdehile. Quanto maior o <strong>dano crítco</strong> e o <strong>ataque</strong>, mais ele cura. A taxa crítica do Verdehile, precisa estar obrigatóriamente em 100%. Para que a barra de Atk dos mobs encha com a sua passiva, resultando no ganho de turnos.</p>
                 <p>Recomenda-se por set de <strong>Rage/Blade</strong>, mas pode-se usar set <strong>Fatal/Blade</strong> ou <strong>Violet/Blade</strong>.</p>
                  <div class="box-img-verde">
                     <img src="imagens/guia-tricaru-verdehile-runas.png" alt="" class="img-verde-runas">
